--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:label="Film App"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".FilmDetailActivity"></activity>
-        <activity android:name=".FilmActivity"/>
+        <activity android:name=".FilmDetailActivity" />
+        <activity android:name=".FilmActivity" />
+        <activity android:name=".FilmRentalsActivity"></activity>
     </application>
 
 </manifest>
